// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No Provider should not provide "No ..." value suggestion when multiple values exists 1`] = `
[
  "Exclude label",
  "triage",
  "accessibility review",
  "batch",
  "availability",
  "🚫 blocked",
  "🐛 bug",
  "🚨 critical",
  "🎨 design",
  "🧪 experiment",
  "done",
  "📝 documentation",
  "
      GitHub 😄",
  "🔴 p1",
  "🟠 p2",
  "🟡 p3",
  "🔵 p4",
  "🔒 security",
  "tech debt",
  "user story",
]
`;

exports[`No Provider should not provide "No ..." value suggestion when value exists 1`] = `
[
  "a11y",
  "availability",
  "a11y (sev 1)",
  "accessibility review",
  "batch",
  "triage",
  "🚨 critical",
  "📝 documentation",
  "team:engineering",
  "
      GitHub 😄",
]
`;

exports[`No Provider should not provide "No" as a key suggestion when no valueless providers exists 1`] = `
[
  "Label",
  "State",
  "Exclude",
]
`;

exports[`No Provider should not provide suggestion for filter provider previously used 1`] = `
[
  "Status",
]
`;

exports[`No Provider should not provide suggestion for filter provider previously used in the same block 1`] = `
[
  "Status",
]
`;

exports[`No Provider should provide "No ..." value suggestion when value is empty 1`] = `
[
  "No label",
  "Exclude label",
  "triage",
  "a11y",
  "accessibility review",
  "batch",
  "availability",
  "🚫 blocked",
  "🐛 bug",
  "🚨 critical",
  "🎨 design",
  "🧪 experiment",
  "done",
  "📝 documentation",
  "
      GitHub 😄",
  "🔴 p1",
  "🟠 p2",
  "🟡 p3",
  "🔵 p4",
  "🔒 security",
  "tech debt",
  "user story",
]
`;

exports[`No Provider should provide "No" as a key suggestion for multiple valueless providers 1`] = `
[
  "No",
]
`;

exports[`No Provider should provide "No" as a key suggestion for multiple valueless providers 2`] = `
[
  "Label",
]
`;

exports[`No Provider should provide "No" as a key suggestion for single valueless provider 1`] = `
[
  "No",
]
`;

exports[`No Provider should provide "No" as a key suggestion for single valueless provider 2`] = `
[
  "Label",
]
`;
